--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlArgentina - Flamengo siempre bien representado en Argentina</title>
-    <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="./imagenes/minilogo.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
+     <!-- FONT AWESOME -->
+     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
+     <!-- FAVICON LOGO TAB -->
+     <link rel="icon" href="./imagenes/minilogo.png">
+     <!-- FUENTES -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
+     <!-- STYLE -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -48,7 +52,8 @@
             </div>
           </nav>
     </header>
-    <main id="main" class="homepage">
+    <main id="main">
+      <!-- CAROUSEL -->
         <div id="carouselhome" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselhome" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -87,6 +92,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+            <!-- HEADLINES SECUNDARIOS -->
         <div class="index2">
             <div class="card2">
                 <a href="./paginas/contacto.html">
