--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,11 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlArgentina - Contactate con nosotros</title>
+    <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
+    <!-- FAVICON LOGO TAB -->
     <link rel="icon" href="../imagenes/minilogo.png">
+    <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
+    <!-- STYLE -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -51,7 +54,7 @@
     </header>
     <main>
         <h3 class="pagetitle">Dejanos su mensaje/consulta y sus datos:</h3>
-        <form class="padding margin-left row g-3">
+        <form class="padding margin-left margin-right row g-3">
             <div class="col-md-6">
               <label class="form-label" for="fname">Nombre:</label>
             <input type="text" class="form-control" id="fname" name="fname"><br><br>  
@@ -131,9 +134,9 @@
             </div>
                
         </form>
-        <h5 style="text-decoration-color: black;" class="padding">O contactanos a través de los siguientes canales:</h5>
-        <p class="padding-top"><strong>E-mail:</strong> <a href="mailto:flargentina@gmail.com">flargentina@gmail.com</a></p>
-        <p class="padding-top"><strong>WhatsApp:</strong> +54 9 11 XXXX-XXXX</p>
+        <h5 style="text-decoration-color: black;" class="margin-left">O contactanos a través de los siguientes canales:</h5>
+        <p class="padding-left margin-left"><strong>E-mail:</strong> <a href="mailto:flargentina@gmail.com">flargentina@gmail.com</a></p>
+        <p class="padding-left margin-left"><strong>WhatsApp:</strong> +54 9 11 XXXX-XXXX</p>
     </main>
     <div class="container-fluid mt-auto pt-1">
       <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
