--- a/paginas/galerias.html
+++ b/paginas/galerias.html
@@ -7,11 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlArgentina - Las mejores fotos del Mengao</title>
-    <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="../imagenes/minilogo.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
+     <!-- FONT AWESOME -->
+     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
+     <!-- FAVICON LOGO TAB -->
+     <link rel="icon" href="../imagenes/minilogo.png">
+     <!-- FUENTES -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
+     <!-- STYLE -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
