--- a/paginas/quienessomos.html
+++ b/paginas/quienessomos.html
@@ -7,11 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlArgentina - La história de la casa de los fanáticos de Flamengo en Argentina</title>
-    <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="../imagenes/minilogo.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
+     <!-- FONT AWESOME -->
+     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
+     <!-- FAVICON LOGO TAB -->
+     <link rel="icon" href="../imagenes/minilogo.png">
+     <!-- FUENTES -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
+     <!-- STYLE -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -52,7 +56,7 @@
         <h1 class="pagetitle">Quienes somos</h1>
         <h3 class="padding-top">Nuestra historia</h3>
         <p class="padding">Somos un grupo de hinchas de Flamengo residentes en Buenos Aires que se conoció cuando nuestro Mengao vino al Nuevo Gasómetro para enfrentarse con San Lorenzo. El resultado de aquél partido no fue el que esperábamos, pero como legado quedo un grupo que empezó a agregar más residentes en Argentina y a los turistas brasileños de paso para asistir a los partidos. Juntos vivimos decepciones, como la derrota en la final de la Copa Sudamericana del mismo 2017, contra Independiente, pero también muchos momentos felices, como la conquista de la Copa Libertadores de 2019 y los campeonatos nacionales de 2019 y 2020.</p>
-        <p class="padding"><img class="quienessomos__img" src="../imagenes/final-carioca-1.jpeg" alt="Grupo de hinchas de Flamengo en Argentina reunido"><br>Nuestro grupo en uno de los partidos de Flamengo en Buenos Aires</p>
+        <p class="padding"><img class="quienessomos__img" src="../imagenes/flargentina_grupo.jpg" alt="Grupo de hinchas de Flamengo en Argentina reunido"><br>Nuestro grupo en uno de los partidos de Flamengo en Buenos Aires</p>
         <h3 class="padding-top">Actualidad</h3>
         <p class="padding">Estuvimos inactivos en 2020 y 2021 en virtud de la pandemia del COVID-19, pero ahora estamos nuevamente activos, con eventos a cada partido de Flamengo. Podés encontrar más información sobre nuestras próximas juntadas en <a href="./eventos.html">nuestra página de eventos</a>.</p>
     </main>
